# pac-man-evolution

./: Makefile.am  configure.ac  distibuir.sh  doxy.conf  evento.cpp  generate_include_fix.sh  informe.abw  informe.doc  manual_editor.abw  merge.sh  sed_calls.awk  translate-include.sh
branches/makefiles/: Makefile.am  configure.ac
client/: Abecedario.h  Aplicacion.cpp  AplicacionGrafica.cpp  AplicacionGrafica.h  BufferMensajes.cpp  GLframe.cbp  JugadorLocal.cpp  Makefile.am  MiniMapa.cpp  MiniMapa.h  ModeloServidor.cpp  OperacionInit.cpp  OperacionInit.h  OperacionMensaje.h  OperacionStart.cpp  PaqueteStatus.cpp  PaqueteTecla.h  Sonidos.cpp  asd.workspace  main.cpp  mundo3.mdo  valgrind
client/OGL/: Aplicacion.cpp  Aplicacion.h  AplicacionGrafica.cpp  AplicacionGrafica.h  CargadordeTexturas.cpp  Escenario.cpp  Escenario.h  GLframe.layout  JugadorLocal.cpp  Makefile  Thumbs.db  main.cpp  nivel 10 x 10  powerup.3DS
client/OpenGl/: 3dsloader.cpp  GLframe  GLframe.layout  ObjetoVisual.h  banana.3DS  fantasma.3DS  main.h  pacman.3DS  pastilla.3DS  powerup.3DS
client/red/: Cliente.cpp  JugadorLocal.h  Makefile  main.cpp
common/: Cliente.cpp  Cliente.h  Comestible.h  ComestibleFactory.cpp  ComparadorPosicion.h  ConfValue.cpp  ConfValue.h  EscritorCliente.h  EscuchadorCliente.cpp  Fantasma.cpp  Jugador.h  Makefile.am  MapImpSet.h  MapaBajoNivel.h  ModeloCommon.cpp  ModeloCommon.h  MundoBasicImp.h  NovedadComestible.cpp  NovedadComestible.h  Operacion.h  OperacionNula.h  PacMan.cpp  Paquete.h  PaqueteInitCommon.cpp  PaqueteInitCommon.h  PaqueteQuit.cpp  PaqueteQuitCommon.h  PaqueteStartCommon.cpp  PaqueteStartCommon.h  PaqueteStatusCommon.cpp  PaqueteStop.cpp  PaqueteStop.h  PaqueteStopCommon.cpp  Posicion.cpp  SocketReader.h  bloqueo.cpp  client_socket.cpp  comparador.h  evento.cpp  grafo.h  (+6 more)
common/common/: ConfValue.cpp  Configuracion.cpp  Makefile.am  bloqueo.cpp  bloqueo.h  client_socket.h  evento.h  mutex.cpp  observable.h  server_socket.cpp  server_socket.h  smart_pointer.h  smart_pointer_arrays.h  vertice.h  wrapper.h
common/editor/: Makefile.am  bif_este.cpp  bif_sur.h  casa_fantasmas.h  casa_norte.h  casa_oeste.cpp  casa_sur.cpp  casa_sur.h  componente.cpp  cruce.cpp  dato_vertice.cpp  definiciones.h  elemento.h  esq_este.cpp  esq_este.h  esq_norte.cpp  fab_elementos.h  mundo.cpp  pas_horiz.cpp  pas_vert.h  portal_sur.h  punto.cpp  recorredor_grafo.h
common/server/: Cliente.cpp  Cliente.h  ComestibleFactory.cpp  Direccion.cpp  EscritorCliente.cpp  EscuchadorCliente.cpp  EstructuralPasillo.h  EstructuralUnitario.h  EstructuralUnitarioFactory.h  Frutita.h  InputBitStream.h  Jugador.h  Makefile.am  MapaBajoNivel.h  ModeloCommon.cpp  MundoBajoNivel.h  MundoBasicImp.h  Paquete.cpp  PaqueteInitCommon.h  PaqueteMensaje.cpp  PaqueteQuit.cpp  PaqueteQuit.h  PaqueteQuitCommon.cpp  PaqueteStatusCommon.h  PaqueteStopCommon.cpp  PaqueteStopCommon.h  PaqueteTeclaCommon.cpp  Posicion.h  Quesito.h  SocketReader.h
common/tinyxml/: Makefile.am
map_editor/: Makefile  Makefile.am  act_marcas.h  app.h  app_editor.cpp  app_editor.h  appcleaner.h  bif_norte.cpp  bif_norte.h  bonus.cpp  casa_fantasmas.cpp  casa_oeste.cpp  casa_sur.cpp  casa_sur.h  componente.cpp  control_seleccion.h  definiciones.h  editor_mapas.cpp  elemento.cpp  elemento.h  esq_este.cpp  esq_este.h  esq_norte.cpp  esq_norte.h  esq_oeste.h  esq_sur.cpp  esq_sur.h  estructural.cpp  estructural.h  fab_elementos.cpp  fab_elementos.h  file_chooser.cpp  file_chooser.h  gui.cpp  gui.h  item_abrir.h  item_archivo.cpp  item_elem.cpp  item_elem.h  item_guardar.cpp  (+42 more)
pme-client/: Aplicacion.cpp  Aplicacion.h  AplicacionGrafica.h  Escenario.cpp  Escenario.h  Makefile.am  MiniMapa.cpp  ModeladorObjetos.h  ModeloServidor.h  ObjetoVisual.h  OperacionInit.h  OperacionMensaje.h  OperacionStart.cpp  OperacionStatus.cpp  OperacionStatus.h  PaqueteInit.h  PaqueteStop.h  PaqueteTecla.cpp  PaqueteTecla.h  SelectorCamara.cpp  SelectorCamara.h  main.cpp  pastilla.3DS  pme-client.conf
server/: App.cpp  App.h  AvisadorNovedades.cpp  BitStream.cpp  BitStream.h  Casillero.cpp  Casillero.h  CasilleroCasaFantasma.h  CasilleroPasillo.cpp  CasilleroPasillo.h  ClientPool.cpp  ClientPool.h  Cliente.cpp  Cliente.h  Codec.h  Comestible.cpp  Comestible.h  ComestibleFactory.cpp  ComestibleFactory.h  ComparadorPosicion.h  Direccion.cpp  Direccion.h  EscritorCliente.cpp  EscritorCliente.h  EscuchadorCliente.cpp  Estructural.cpp  Estructural.h  EstructuralCasaFantasma.cpp  EstructuralCasaFantasma.h  EstructuralPasillo.cpp  EstructuralPasillo.h  EstructuralSalidaPacman.cpp  EstructuralSalidaPacman.h  EstructuralUnitario.cpp  EstructuralUnitario.h  EstructuralUnitarioFactory.cpp  EstructuralUnitarioFactory.h  Fantasma.cpp  Fantasma.h  Frutita.h  (+61 more)
trunk/: Makefile.am  configure.ac  doxy.conf  evento.h  test_de_jp_nivel1.nvl
trunk/6620.tp2/: core2-plot.tex  graficos_core2.xls  informe.tex
trunk/appdata/: Makefile.am
trunk/client/: ColeccionObjetos.cpp  Makefile  main.cpp
trunk/common/: Makefile.am  grafo.h  smart_pointer.h  socket.cpp  socket.h  thread.cpp  thread.h
trunk/informe/: 1informe.abw  informe.abw
trunk/map_editor/: Makefile  Makefile.am  act_marcas.cpp  act_marcas.h  app_editor.cpp  app_editor.h  bonus.cpp  bonus.h  casa_este.cpp  casa_este.h  casa_fantasmas.cpp  casa_norte.cpp  casa_norte.h  casa_oeste.cpp  casa_oeste.h  casillero.cpp  definiciones.h  editor_mapas.cpp  elemento.cpp  elemento.h  esq_este.cpp  esq_este.h  esq_norte.cpp  esq_norte.h  esq_oeste.cpp  esq_oeste.h  esq_sur.cpp  esq_sur.h  estructural.cpp  estructural.h  fab_elementos.cpp  file_chooser.cpp  file_chooser.h  gui.h  item_abrir.cpp  item_abrir.h  item_guardar.cpp  item_guardar.h  item_nuevo.cpp  item_nuevo.h  (+28 more)
trunk/opt/: ConfValue.cpp  Configuracion.cpp  Configuracion.h  sample.conf
trunk/pme-client/: Abecedario.cpp  AplicacionGrafica.cpp  ColeccionObjetos.cpp  ConfCliente.cpp  CreadorPaquete.cpp  Sonidos.h  main.cpp
trunk/pme-server/: App.h  Makefile.am  MessageDispatcher.h  OperacionMensaje.cpp  PaqueteQuit.cpp  Servidor.h  traductor.h
trunk/server/: App.cpp  (+92 more)
(+1028 files in other folders)
