
## Makefile.am -- Process this file with automake to produce Makefile.in

##  robado del autobook - seccion 5.1

SUBDIRS = tinyxml

noinst_LTLIBRARIES = libpme-common.la

libpme_common_la_SOURCES = \
	BufferReader.h \
	Cliente.cpp \
	Cliente.h \
	Comestible.cpp \
	Comestible.h \
	ComestibleFactory.cpp \
	ComestibleFactory.h \
	ComparadorPosicion.h \
	Direccion.cpp \
	Direccion.h \
	EscritorCliente.cpp \
	EscritorCliente.h \
	EscuchadorCliente.cpp \
	EscuchadorCliente.h \
	EstructuralCasaFantasma.cpp \
	EstructuralCasaFantasma.h \
	EstructuralPasillo.cpp \
	EstructuralPasillo.h \
	EstructuralUnitario.cpp \
	EstructuralUnitario.h \
	EstructuralUnitarioFactory.cpp \
	EstructuralUnitarioFactory.h \
	Fantasma.cpp \
	Fantasma.h \
	Frutita.h \
	InputBitStream.cpp \
	InputBitStream.h \
	Jugador.cpp \
	Jugador.h \
	MapImpSet.cpp \
	MapImpSet.h \
	MapaBajoNivel.h \
	MemoryReader.cpp \
	MemoryReader.h \
	ModeloCommon.cpp \
	ModeloCommon.h \
	MundoBajoNivel.h \
	MundoBasicImp.cpp \
	MundoBasicImp.h \
	Operacion.h \
	OutputBitStream.cpp \
	OutputBitStream.h \
	PacMan.cpp \
	PacMan.h \
	Paquete.cpp \
	Paquete.h \
	PaqueteInitCommon.cpp \
	PaqueteInitCommon.h \
	PaqueteMensaje.cpp \
	PaqueteMensaje.h \
	PaqueteQuit.cpp \
	PaqueteQuit.h \
	PaqueteStartCommon.cpp \
	PaqueteStartCommon.h \
	PaqueteStatusCommon.cpp \
	PaqueteStatusCommon.h \
	PaqueteStop.cpp \
	PaqueteStop.h \
	PaqueteTeclaCommon.cpp \
	PaqueteTeclaCommon.h \
	Personaje.cpp \
	Personaje.h \
	Posicion.cpp \
	Posicion.h \
	PowerUp.cpp \
	PowerUp.h \
	Quesito.h \
	SocketReader.cpp \
	SocketReader.h \
	arco.h \
	bloqueo.cpp \
	bloqueo.h \
	client_socket.cpp \
	client_socket.h \
	comparador.h \
	contador.h \
	evento.cpp \
	evento.h \
	grafo.h \
	mutex.cpp \
	mutex.h \
	observable.cpp \
	observable.h \
	observador.h \
	server_socket.cpp \
	server_socket.h \
	smart_pointer.h \
	smart_pointer_arrays.h \
	socket.cpp \
	socket.h \
	thread.cpp \
	thread.h \
	vertice.h \
	wrapper.h 

libpme_common_la_LDFLAGS = -static

libpme_common_la_LIBADD = tinyxml/libtinyxml.la

CLEANFILES = *~
