
# Makefile.am -- Process this file with automake to produce Makefile.in

#  robado del autobook - seccion 5.1

bin_PROGRAMS = pme-editor

pme_editor_SOURCES = \
	act_marcas.cpp \
	act_marcas.h \
	app_cleaner_editor.cpp \
	app_cleaner_editor.h \
	app_editor.cpp \
	app_editor.h \
	bif_este.cpp \
	bif_este.h \
	bif_norte.cpp \
	bif_norte.h \
	bif_oeste.cpp \
	bif_oeste.h \
	bif_sur.cpp \
	bif_sur.h \
	bonus.cpp \
	bonus.h \
	casa_este.cpp \
	casa_este.h \
	casa_fantasmas.cpp \
	casa_fantasmas.h \
	casa_norte.cpp \
	casa_norte.h \
	casa_oeste.cpp \
	casa_oeste.h \
	casa_sur.cpp \
	casa_sur.h \
	casillero.cpp \
	casillero.h \
	componente.cpp \
	componente.h \
	control_seleccion.cpp \
	control_seleccion.h \
	cruce.cpp \
	cruce.h \
	dato_vertice.cpp \
	dato_vertice.h \
	definiciones.h \
	editor_mapas.cpp \
	elemento.cpp \
	elemento.h \
	esq_este.cpp \
	esq_este.h \
	esq_norte.cpp \
	esq_norte.h \
	esq_oeste.cpp \
	esq_oeste.h \
	esq_sur.cpp \
	esq_sur.h \
	estructural.cpp \
	estructural.h \
	fab_elementos.cpp \
	fab_elementos.h \
	file_chooser.cpp \
	file_chooser.h \
	gui.cpp \
	gui.h \
	item.cpp \
	item.h \
	item_abrir.cpp \
	item_abrir.h \
	item_archivo.cpp \
	item_archivo.h \
	item_elem.cpp \
	item_elem.h \
	item_guardar.cpp \
	item_guardar.h \
	item_nuevo.cpp \
	item_nuevo.h \
	item_salir.cpp \
	item_salir.h \
	m_arch_factory.cpp \
	m_arch_factory.h \
	m_bar_factory.cpp \
	m_bar_factory.h \
	mapa.cpp \
	mapa.h \
	menu.cpp \
	menu.h \
	menubar.cpp \
	menubar.h \
	modelo.cpp \
	modelo.h \
	modificador.cpp \
	modificador.h \
	mundo.cpp \
	mundo.h \
	nivel.cpp \
	nivel.h \
	obj_nulo.h \
	panel_elems.cpp \
	panel_elems.h \
	panel_mundo.cpp \
	panel_mundo.h \
	pas_horiz.cpp \
	pas_horiz.h \
	pas_vert.cpp \
	pas_vert.h \
	portal.cpp \
	portal.h \
	portal_este.cpp \
	portal_este.h \
	portal_norte.cpp \
	portal_norte.h \
	portal_oeste.cpp \
	portal_oeste.h \
	portal_sur.cpp \
	portal_sur.h \
	power_up.cpp \
	power_up.h \
	punto.cpp \
	punto.h \
	recorredor_grafo.h \
	salida.cpp \
	salida.h \
	submenu.cpp \
	submenu.h \
	v_ingreso_datos.cpp \
	v_ingreso_datos.h \
	v_principal.cpp \
	v_principal.h \
	vista_mapa.cpp \
	vista_mapa.h

pme_editor_CPPFLAGS = @GTK_CFLAGS@

pme_editor_LDADD = \
	@GTK_LIBS@ \
	$(top_builddir)/common/libpme-common.la

CLEANFILES = *~
