
## Makefile.am -- Process this file with automake to produce Makefile.in

##  robado del autobook - seccion 5.1

noinst_LIBRARIES = libtinyxml.a

libtinyxml_a_SOURCES = \
	tinystr.cpp \
	tinystr.h \
	tinyxml.cpp \
	tinyxmlerror.cpp \
	tinyxml.h \
	tinyxmlparser.cpp 

#libtinyxml_la_LDFLAGS = -static

CLEANFILES = *~
