
# Makefile.am -- Process this file with automake to produce Makefile.in

#  robado del autobook - seccion 5.1

bin_PROGRAMS = pme-editor

pme_editor_SOURCES = \
	act_marcas.cpp \
	app_cleaner_editor.cpp \
	app_editor.cpp \
	bonus.cpp \
	casa_este.cpp \
	casa_fantasmas.cpp \
	casa_norte.cpp \
	casa_oeste.cpp \
	casa_sur.cpp \
	casillero.cpp \
	componente.cpp \
	control_seleccion.cpp \
	dato_vertice.cpp \
	editor_mapas.cpp \
	elemento.cpp \
	esq_este.cpp \
	esq_norte.cpp \
	esq_oeste.cpp \
	esq_sur.cpp \
	estructural.cpp \
	fab_elementos.cpp \
	file_chooser.cpp \
	gui.cpp \
	item.cpp \
	item_abrir.cpp \
	item_archivo.cpp \
	item_elem.cpp \
	item_guardar.cpp \
	item_nuevo.cpp \
	item_salir.cpp \
	m_arch_factory.cpp \
	m_bar_factory.cpp \
	mapa.cpp \
	menu.cpp \
	menubar.cpp \
	modelo.cpp \
	modificador.cpp \
	mundo.cpp \
	nivel.cpp \
	panel_elems.cpp \
	panel_mundo.cpp \
	pas_horiz.cpp \
	pas_vert.cpp \
	power_up.cpp \
	punto.cpp \
	salida.cpp \
	submenu.cpp \
	traductor.cpp \
	v_ingreso_datos.cpp \
	v_principal.cpp \
	vista_mapa.cpp

pme_editor_CPPFLAGS = @GTK_CFLAGS@

pme_editor_LDADD = @GTK_LIBS@

CLEANFILES = *~
