
## Makefile.am -- Process this file with automake to produce Makefile.in

##  robado del autobook - seccion 5.1

noinst_LTLIBRARIES = libpme-server.la
bin_PROGRAMS = pme-server

libpme_server_la_SOURCES = \
	BufferReader.h \
	Cliente.cpp \
	Cliente.h \
	Comestible.cpp \
	ComestibleFactory.cpp \
	ComestibleFactory.h \
	Comestible.h \
	ComparadorPosicion.h \
	Direccion.cpp \
	Direccion.h \
	EscritorCliente.cpp \
	EscritorCliente.h \
	EscuchadorCliente.cpp \
	EscuchadorCliente.h \
	EstructuralCasaFantasma.cpp \
	EstructuralCasaFantasma.h \
	EstructuralPasillo.cpp \
	EstructuralPasillo.h \
	EstructuralUnitario.cpp \
	EstructuralUnitarioFactory.cpp \
	EstructuralUnitarioFactory.h \
	EstructuralUnitario.h \
	Fantasma.cpp \
	Fantasma.h \
	Frutita.h \
	InputBitStream.cpp \
	InputBitStream.h \
	Jugador.cpp \
	Jugador.h \
	MapaBajoNivel.h \
	MapImpSet.cpp \
	MapImpSet.h \
	MemoryReader.cpp \
	MemoryReader.h \
	ModeloServidor.cpp \
	ModeloServidor.h \
	MundoBajoNivel.h \
	MundoBasicImp.cpp \
	MundoBasicImp.h \
	Operacion.h \
	OperacionStatus.cpp \
	OperacionStatus.h \
	OutputBitStream.cpp \
	OutputBitStream.h \
	PacMan.cpp \
	PacMan.h \
	Paquete.cpp \
	Paquete.h \
	PaqueteInit.cpp \
	PaqueteInit.h \
	PaqueteMensaje.cpp \
	PaqueteMensaje.h \
	PaqueteQuit.cpp \
	PaqueteQuit.h \
	PaqueteStart.cpp \
	PaqueteStart.h \
	PaqueteStatus.cpp \
	PaqueteStatus.h \
	PaqueteStop.cpp \
	PaqueteStop.h \
	PaqueteTecla.cpp \
	PaqueteTecla.h \
	Personaje.cpp \
	Personaje.h \
	Posicion.cpp \
	Posicion.h \
	PowerUp.cpp \
	PowerUp.h \
	Quesito.h \
	reloj.cpp \
	reloj.h \
	SocketReader.cpp \
	SocketReader.h

pme_server_SOURCES = \
	App.cpp \
	App.h \
	AvisadorNovedades.cpp \
	AvisadorNovedades.h \
	ClientPool.cpp \
	ClientPool.h \
	KeyOp.cpp \
	KeyOp.h \
	Main.cpp \
	Servidor.cpp \
	Servidor.h

llibpme_server_la_LDFLAGS = -static

CLEANFILES = *~
