
# Makefile.am -- Process this file with automake to produce Makefile.in

#  robado de http://live.gnome.org/Create_a_GTK_Project_using_autotools

SUBDIRS = MiniMapa

pmeclientdatadir = @datadir@/pme-client

dist_pmeclientdata_DATA = \
	ABC.bmp \
	Icon.bmp \
	Letra.bmp \
	Mapa.bmp \
	banana.3DS \
	banana.bmp \
	cerecita.3DS \
	cerecita.bmp \
	fantasma.3DS \
	fantasma.bmp \
	font.bmp \
	pacman.3DS \
	pacman.bmp \
	pared.bmp \
	pastilla.3DS \
	pastilla.bmp \
	piso.bmp \
	powerup.3DS \
	powerup.bmp \
	textura.bmp 

CLEANFILES = *~
