
# Makefile.am -- Process this file with automake to produce Makefile.in

#  robado de http://live.gnome.org/Create_a_GTK_Project_using_autotools

medataimagenesdir = @datadir@/map_editor/imagenes

dist_medataimagenes_DATA = \
	bif_este.png \
	bif_norte.png \
	bif_oeste.png \
	bif_sur.png \
	casa_este.png \
	casa_norte.png \
	casa_oeste.png \
	casa_sur.png \
	cruce.png \
	cruz.png \
	esq_este.png \
	esq_norte.png \
	esq_oeste.png \
	esq_sur.png \
	frutita.png \
	pas_horiz.png \
	pas_vert.png \
	portal_este.png \
	portal_norte.png \
	portal_oeste.png \
	portal_sur.png \
	power_up.png \
	salida.png \
	vacio.png

EXTRA_DIST = imagenes
CLEANFILES = *~
