
# Makefile.am -- Process this file with automake to produce Makefile.in

#  robado de http://live.gnome.org/Create_a_GTK_Project_using_autotools

pmeclientminimapdir = @datadir@/pme-client/MiniMapa

dist_pmeclientminimap_DATA = \
	Casillero.bmp \
	ConectorH.bmp \
	ConectorV.bmp \
	Fantasma.bmp \
	Frutita.bmp \
	Makefile.am \
	Mapa.bmp \
	Pacman.bmp \
	Powerup.bmp \
	Quesito.bmp

CLEANFILES = *~
